WIP: Home office task for irp claim

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -133,6 +133,8 @@ en:
       student_loan_amount: "Check student loan amount"
       payroll_details: "Check bank/building society account details"
       census_subjects_taught: "Check eligible subjects are taught"
+      home_office: Check the claimant with the Home Office
+      school_checks: Check the claimant school employment
     undo_decision:
       approved: "Undo approval"
       rejected: "Undo rejection"
